@@ -4,9 +4,18 @@ container classes, so cache types such as
 "ext:google", "ext:sqla", etc. are available.  
 memcached is available as both "ext:memcached" and
 "memcached", the latter for backwards compatibility.
+This requires Beaker>=1.0.1.
 
 - fixed the html_error_template not handling tracebacks from
 normal .py files with a magic encoding comment [ticket:88]
+
+- added ModuleTemplate class, which allows the construction
+of a Template given a Python module generated by a previous
+Template.   This allows Python modules alone to be used
+as templates with no compilation step.   Source code
+and template source are optional but allow error reporting
+to work correctly.
+
 
 0.2.2
 - cached blocks now use the current context when rendering
